--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
     "@material-ui/styles": "^4.9.14",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "axios": "^0.21.1",
+    "call-bind": "^1.0.2",
     "dayjs": "^1.8.28",
+    "install": "^0.13.0",
+    "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
+    "npm": "^7.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-places-autocomplete": "^7.2.1",
@@ -20,7 +26,8 @@
     "react-swipeable-views-utils": "^0.13.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "vue-interactive-paycard-component": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
