--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_API_KEY=AIzaSyCtiRJ1k_i6Rbigau8sQyZq2tqxzxM-jdM
-REACT_APP_SERVER_URL=http://noom-env.eba-bibwqzu5.us-east-2.elasticbeanstalk.com
+REACT_APP_SERVER_URL=https://nomadeats.fr
