--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "npm": "^7.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-gracefully": "^0.4.5",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.2.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-swipeable-views": "^0.13.9",
