--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GOOGLE_API_KEY=AIzaSyCtiRJ1k_i6Rbigau8sQyZq2tqxzxM-jdM
-REACT_APP_SERVER_URL=https://chimpnomadeats.fr
+REACT_APP_SERVER_URL=http://localhost:3002
