--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "install": "^0.13.0",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
+    "no-scroll": "^2.1.1",
     "npm": "^7.6.0",
-    "react": "^16.13.1",
+    "react": "^16.13.1", 
     "react-dom": "^16.13.1",
     "react-gracefully": "^0.4.5",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.12.1",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.2.0",
     "react-responsive": "^8.2.0",
