--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@stripe/stripe-js": "^1.13.1",
     "axios": "^0.21.1",
     "call-bind": "^1.0.2",
+    "classnames": "^2.2.6",
     "dayjs": "^1.8.28",
     "install": "^0.13.0",
     "is-core-module": "^2.2.0",
     "jwt-decode": "^2.2.0",
     "no-scroll": "^2.1.1",
     "npm": "^7.6.0",
-    "react": "^16.13.1", 
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-gracefully": "^0.4.5",
     "react-icons": "^4.2.0",
