--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_GOOGLE_API_KEY=AIzaSyCtiRJ1k_i6Rbigau8sQyZq2tqxzxM-jdM
-REACT_APP_SERVER_URL=localhost:3002
+REACT_APP_SERVER_URL=https://chimpnomadeats.fr
 REACT_APP_SERVER_AMAZON=https://nomadeatsimages.s3-eu-west-1.amazonaws.com
